started on register account in 3 pages.

--- a/app/views/includes/great-header-no-beta.html
+++ b/app/views/includes/great-header-no-beta.html
@@ -968,11 +968,21 @@
             <div class="account-locale-links">
                 <ul aria-label="Account links" class="navigation account-links">
 
-                    <!--<li class="authenticated"><a href="#" class="profile">Profile</a></li>-->
-                    <li><a href="/return-journey/signin-general" >Sign in</a></li>
+                    <li class="authenticated" style="margin-right:5px"><a href="/register" class="profile">Register</a></li>
+                    <li><a href="/register/sign-in" style="font-weight: 400;">| </a></li>
+                    <li><a href="/register/sign-in" style="margin-left:5px;">Sign in</a></li>
 
-                </ul><span class="greeting"></span>
-                <a class="LanguageSelectorDialog-Tracker bidi-ltr" href="#" aria-controls="LanguageSelectorDialog_1513072894430_007526234367374318"><span class="lang">en</span><span class="label">UK</span></a></div>
+                </ul>
+
+                <!--
+                <span class="greeting"></span>
+                <a class="LanguageSelectorDialog-Tracker bidi-ltr" href="#" aria-controls="LanguageSelectorDialog_1513072894430_007526234367374318">
+                    <span class="lang">en</span>
+                    <span class="label">UK</span>
+                </a>
+                -->
+
+            </div>
         </div>
         <div class="container">
             <a class="dit-logo" href="#">
