--- a/app/views/register/reset-password.html
+++ b/app/views/register/reset-password.html
@@ -44,12 +44,6 @@ GOV.UK prototype kit
 			{% if errorInvalidEmail %}
 			<li><a href="#email-field">Email: invalid</a></li>
 			{% endif %}
-			{% if errorPasswordMissing %}
-			<li><a href="#password-field">Password: missing</a></li>
-			{% endif %}
-			{% if errorEmailPasswordInvalid %}
-			<li><a href="#bothfields">Email address and/or password: not correct</a></li>
-			{% endif %}
 		</ul>
 	</div>
 	{% endif %}
@@ -58,7 +52,7 @@ GOV.UK prototype kit
 
 
 	<h1 class="heading-large" style="font-weight:400; font-size:48px; margin-top:40px;" >
-		  Sign in
+		Password reset
       </h1>
 
   <div class="grid-row">
@@ -68,14 +62,10 @@ GOV.UK prototype kit
 
 	  <form action="" method="post" class="form">
 
-		  <p style="margin-bottom:30px;"><a href="#" >Register</a> if you don't have an account.</p>
+		  <!-- <p style="margin-bottom:30px;"><a href="#" >Register</a> if you don't have an account.</p>  -->
 
 
-			  <fieldset id="bothfields" class="form-group {% if errorEmailPasswordInvalid %} form-group-error {% endif %}" >
-
-				  {% if errorEmailPasswordInvalid %}
-				  		<p class="error-message" style="margin-bottom:30px; margin-top:10px;" >The e-mail address and/or password you entered are not correct.</p>
-				  {% endif %}
+			  <fieldset id="bothfields" class="" >
 
 				  <div id="email-field" class="form-group form-control-2-3 {% if errorEmailMissing or errorInvalidEmail %} form-group-error {% endif %}" style="width:580px;">
 					  <label class="form-label" for="email-area" style="margin-bottom:5px;">
@@ -95,36 +85,19 @@ GOV.UK prototype kit
 								 id="email-address" name="email-address" value="{{ data['email-address'] }}" style="width:100%;">
 					  </div>
 				  </div>
-		
-
-		          <div id="password-field" class="form-group {% if errorPasswordMissing %} form-group-error {% endif %}">
-					  <label class="form-label" for="password"  style="margin-bottom:5px;">
-						  Password
-						  {% if errorPasswordMissing %}
-							  <span class="error-message">
-								  Please enter a password
-							  </span>
-						  {% endif %}
-					  </label>
-					  <div id="show-new-question" style="width:100%;  margin-bottom:0px;">
-						  <input type="password" class="form-control" id="password" name="password" value="{{ data['password'] }}" style="width: 170px;">
-					  </div>
-				  </div>
-
-
-		  		  <!-- REMEMBER ME -->
-				  <div class="multiple-choice" style="padding-top: 5px; padding-left: 40px;">
-					  <input id="remember" name="remember" type="checkbox" value="">
-					  <label for="remember">Remember me</label>
-				  </div>
 
 			  </fieldset>
 
 			  
 
 			  <div class="form-group" style="display: flex;  flex-direction: row;">
-				  <input type="submit" class="button button-blue"  value="Sign in">
-				  <p style="margin-left:32px; margin-top:15px;"><a href="/register/reset-password" style="font-size: 19px; text-decoration: none">Reset your password</a></p>
+				  <input type="submit" class="button button-blue"  value="Reset your password">
+				  <!-- <p style="margin-left:32px; margin-top:15px;"><a href="#" style="font-size: 19px; text-decoration: none">Reset your password</a></p> -->
+			  </div>
+
+
+		      <div>
+				  <p style="margin-bottom:30px; font-size: 19px"><a href="#" >Contact us</a> if the password reset doesn't work.</p>
 			  </div>
 
 	  </form>
