--- a/app/views/register/sign-in.html
+++ b/app/views/register/sign-in.html
@@ -68,7 +68,7 @@ GOV.UK prototype kit
 
 	  <form action="" method="post" class="form">
 
-		  <p style="margin-bottom:30px;"><a href="#" >Register</a> if you don't have an account.</p>
+		  <p style="margin-bottom:30px;"><a href="/register" >Register</a> if you don't have an account.</p>
 
 
 			  <fieldset id="bothfields" class="form-group {% if errorEmailPasswordInvalid %} form-group-error {% endif %}" >
