setting up scenarios and fixing and updating th event reg

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,20 @@
       <p><a href="/clear-session">Start fresh</a></p>
 
 
+      <h2 class="heading-medium">Testing</h2>
+      <p><a href="/testing-scenario-1">New user</a></p>
+      <p><a href="/testing-scenario-2">Returning user</a></p>
+      <p><a href="/testing-scenario-3">Returning events user</a></p>
+
+
+
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+
       <h2 class="heading-medium">Event producer</h2>
 
 
