--- a/app/views/register/additional-questions.html
+++ b/app/views/register/additional-questions.html
@@ -151,7 +151,7 @@ Go to an event
 	 
 
 	 
-	  <form action="/create-event/question-onwards" method="get" class="form">
+	  <form method="post" class="form">
 
 
 			  <fieldset class="form-group"
@@ -174,7 +174,7 @@ Go to an event
 
 
 	  <div class="form-group">
-		  <input type="submit" class="button button-blue" formaction="/register/check-your-answers" value="Continue">
+		  <input type="submit" class="button button-blue" value="Continue">
 	  </div>
 
 
