--- a/app/views/register/business-address.html
+++ b/app/views/register/business-address.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
+
 {% if loggedIn == undefined %}
 {% set loggedIn = false %}
 {% endif %}
+
 {% set external_journey = true %}
 
 {% block after_header %}
@@ -12,8 +14,11 @@
 GOV.UK prototype kit
 {% endblock %}
 
+
 {% block content %}
-{% include "includes/great-header.html" %} 
+
+{% include "includes/great-header-beta-signed-in.html" %}
+
 
 <main id="content" role="main">
 	  <h1 class="heading-large">
@@ -40,37 +45,32 @@ GOV.UK prototype kit
 					  <label class="form-label" for="question">
 						  Building and street
 						  {% if errorQuestionEmpty %}
-									<span class="error-message">
-										Attendee question missing
-									</span>
+							<span class="error-message">
+								Attendee question missing
+							</span>
 						  {% endif %}
 					  </label>
 				
 			  
-				  <input class="form-control " id="building" type="text" name="building" style="width:75%" value="">
-				  <input class="form-control" id="street" type="text" name="street" style="width:75%; margin-top:8px" value="">
+				  <input class="form-control " id="business-building" type="text" name="business-building" style="width:75%" value="">
+				  <input class="form-control" id="business-street" type="text" name="business-street" style="width:75%; margin-top:8px" value="">
 			  
 				</div>
 			  
 				<div class="form-group">
-			 
-				  <label class="form-label" for="town" style="margin-bottom:5px; ">Town or city</label>
-				  <input class="form-control " id="town" type="text" name="town" style="width:40%" value="">
-
-			 
+				  <label class="form-label" for="business-town" style="margin-bottom:5px; ">Town or city</label>
+				  <input class="form-control " id="business-town" type="text" name="business-town" style="width:40%" value="">
 				</div>
 			  
 				<div class="form-group">
-				  <label class="form-label" for="postcode" style="margin-bottom:5px;" id="postcode-zipcode">Postcode</label>
-				  <input class="form-control " id="postcode" type="text" name="postcode" style="width:25%" value="">
+				  <label class="form-label" for="business-postcode" style="margin-bottom:5px;" id="postcode-zipcode">Postcode</label>
+				  <input class="form-control " id="business-postcode" type="text" name="business-postcode" style="width:25%" value="">
 
 				</div>
 
-		
 
 			</fieldset>
 		  <div class="form-group">
-
 			  <input type="submit" class="button button-blue" formaction="/register/business-sector" value="Continue">
 		  </div>
 
